--- a/miniprojet_html/contact.html
+++ b/miniprojet_html/contact.html
@@ -9,10 +9,10 @@
 		</header>
 		
 		<nav>
-			<a href="">Acceuil</a>
-			<a href="">Mes compétences</a>
-			<a href="">Mes projets</a>
-			<a href="">Contact</a>
+			<a href="https://sustainerr.github.io/Web_3b4/miniprojet_html/index.html">Acceuil</a>
+			<a href="https://sustainerr.github.io/Web_3b4/miniprojet_html/competence.html">Mes compétences</a>
+			<a href="https://sustainerr.github.io/Web_3b4/miniprojet_html/projet.html">Mes projets</a>
+			<a href="https://sustainerr.github.io/Web_3b4/miniprojet_html/contact.html">Contact</a>
 		</nav>
     <form>
 	<table>
