--- a/miniprojet_html/index.html
+++ b/miniprojet_html/index.html
@@ -9,10 +9,10 @@
 		</header>
 		
 		<nav>
-			<a href="https://sustainerr.github.io/Web_3b4/miniprojet_html/>index.html">Acceuil</a>
-			<a href="https://sustainerr.github.io/Web_3b4/miniprojet_html/>competence.html">Mes compétences</a>
-			<a href="https://sustainerr.github.io/Web_3b4/miniprojet_html/>projet.html">Mes projets</a>
-			<a href="https://sustainerr.github.io/Web_3b4/miniprojet_html/>contact.html">Contact</a>
+			<a href="https://sustainerr.github.io/Web_3b4/miniprojet_html/index.html">Acceuil</a>
+			<a href="https://sustainerr.github.io/Web_3b4/miniprojet_html/competence.html">Mes compétences</a>
+			<a href="https://sustainerr.github.io/Web_3b4/miniprojet_html/projet.html">Mes projets</a>
+			<a href="https://sustainerr.github.io/Web_3b4/miniprojet_html/contact.html">Contact</a>
 		</nav>
 
 		<section>
