--- a/miniprojet_html/projet.html
+++ b/miniprojet_html/projet.html
@@ -8,11 +8,11 @@
 			<h1>Mes Projets</h1>
 		</header>
 		<nav>
-			<a href="">Acceuil</a>
-			<a href="">Mes compétences</a>
-			<a href="">Mes projets</a>
-			<a href="">Contact</a>
-		</nav>   
+			<a href="https://sustainerr.github.io/Web_3b4/miniprojet_html/index.html">Acceuil</a>
+			<a href="https://sustainerr.github.io/Web_3b4/miniprojet_html/competence.html">Mes compétences</a>
+			<a href="https://sustainerr.github.io/Web_3b4/miniprojet_html/projet.html">Mes projets</a>
+			<a href="https://sustainerr.github.io/Web_3b4/miniprojet_html/contact.html">Contact</a>
+		</nav>
 		<section>
         		<article>
 				<table>
