--- a/miniprojet_html/contact.html
+++ b/miniprojet_html/contact.html
@@ -1,60 +1,121 @@
 <!DOCTYPE html>
-	<head>
-		<title>Contact</title>
-	</head>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact</title>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 0;
+            background: #f1f1f1;
+        }
 
-	<body background="back.png">
-		<header>
-			<h1>Contact</h1>
-		</header>
-		
-		<nav>
-			<a href="https://sustainerr.github.io/Web_3b4/miniprojet_html/index.html">Acceuil</a>
-			<a href="https://sustainerr.github.io/Web_3b4/miniprojet_html/competence.html">Mes compétences</a>
-			<a href="https://sustainerr.github.io/Web_3b4/miniprojet_html/projet.html">Mes projets</a>
-			<a href="https://sustainerr.github.io/Web_3b4/miniprojet_html/contact.html">Contact</a>
-		</nav>
+        header {
+            background: #333;
+            color: #fff;
+            text-align: center;
+            padding: 10px;
+        }
+
+        nav {
+            background: #444;
+            padding: 10px;
+            text-align: center;
+        }
+
+        nav a {
+            color: #fff;
+            text-decoration: none;
+            margin: 0 10px;
+        }
+
+        form {
+            display: flex;
+            justify-content: flex-end;
+            margin-top: 20px;
+        }
+
+        table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+
+        table img {
+            border-radius: 8px;
+            max-width: 100%;
+            height: auto;
+        }
+
+        table td {
+            padding: 15px;
+            vertical-align: top;
+        }
+
+        label {
+            display: block;
+            margin-bottom: 5px;
+        }
+
+        input,
+        textarea {
+            width: 100%;
+            padding: 8px;
+            margin-bottom: 15px;
+            box-sizing: border-box;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            resize: vertical;
+        }
+
+        button {
+            background-color: #4CAF50;
+            color: #fff;
+            padding: 20px; /* Increase the padding for a larger button */
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 16px;
+        }
+
+        button:hover {
+            background-color: #45a049;
+        }
+    </style>
+</head>
+
+<body background="back.png">
+    <header>
+        <h1>Contact</h1>
+    </header>
+    
+    <nav>
+        <a href="https://sustainerr.github.io/Web_3b4/miniprojet_html/index.html">Accueil</a>
+        <a href="https://sustainerr.github.io/Web_3b4/miniprojet_html/competence.html">Mes compétences</a>
+        <a href="https://sustainerr.github.io/Web_3b4/miniprojet_html/projet.html">Mes projets</a>
+        <a href="https://sustainerr.github.io/Web_3b4/miniprojet_html/contact.html">Contact</a>
+    </nav>
+
     <form>
-	<table>
-	<tr>
-	<td>
-		<img src="contact.png"  width="250" height="250">
-	</td>
-	<td>
-	<table>
-	<tr>
-	<td>
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name" required>
-	</td>
-	</tr>
-
-	<tr>
-	<td>
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required>
-	</td>
-	</tr>
-
-	<tr>
-	<td>
-        <label for="subject">Sujet:</label>
-        <input type="text" id="subject" name="subject" required>
-	</td>
-	</tr>
-
-	<tr>
-	<td>
-        <label for="message">Message:</label>
-        <textarea id="message" name="message" rows="4" required></textarea>
-	</td>
-	</tr>
-	</table>
-        <button type="submit">Submit</button>
-	</table>
-	</tr>
-	</td>
+        <table>
+            <tr>
+                <td>
+                    <label for="name">Nom :</label>
+                    <input type="text" id="name" name="name" required>
+                    <label for="email">Email :</label>
+                    <input type="email" id="email" name="email" required>
+                    <label for="subject">Sujet :</label>
+                    <input type="text" id="subject" name="subject" required>
+                    <label for="message">Message :</label>
+                    <textarea id="message" name="message" rows="4" required></textarea>
+                </td>
+                <td>
+                    <img src="contact.png"  width="250" height="250" alt="Contact Image">
+                    <button type="submit">Envoyer</button>
+                </td>
+            </tr>
+        </table>
     </form>
-
 </body>
 </html>
