--- a/miniprojet_html/competence.html
+++ b/miniprojet_html/competence.html
@@ -1,67 +1,130 @@
 <!DOCTYPE html>
-	<head>
-		<title>Compétences</title>
-	</head>
+<html lang="en">
 
-	<body background="back.png">
-		<header>
-			<h1>Mes Compétences</h1>
-		</header>
-		
-		<nav>
-			<a href="https://sustainerr.github.io/Web_3b4/miniprojet_html/index.html">Acceuil</a>
-			<a href="https://sustainerr.github.io/Web_3b4/miniprojet_html/competence.html">Mes compétences</a>
-			<a href="https://sustainerr.github.io/Web_3b4/miniprojet_html/projet.html">Mes projets</a>
-			<a href="https://sustainerr.github.io/Web_3b4/miniprojet_html/contact.html">Contact</a>
-		</nav>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Compétences</title>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 0;
+            background: #f1f1f1;
+        }
 
-		<section>
-		<table>
-		<tr>
-		<td>
-			<img src="c.png"  width="100" height="100">
-		</td>
-		<td>
-		        <h2>Langages de Programmation</h2>
-            			<li>C/C++</li>
-            			<li>Assembleur</li>
-            			<li>Python</li>
-		</td>
-		</tr>
-		<tr>
-		<td>
-			<img src="linux.png"  width="200" height="200">
-		</td>
-		<td>
-        		<h2>Systèmes d'Exploitation Embarqués</h2>
-            			<li>RTOS (Real-Time Operating Systems)</li>
-            			<li>FreeRTOS</li>
-            			<li>Embedded Linux</li>
-		</td>
-		</tr>
-		<tr>
-		<td>
-			<img src="arm.jpg"  width="200" height="200">
-		</td>
-		<td>
-        		<h2>Microcontrôleurs et Microprocesseurs</h2>
-            			<li>ARM Cortex-M Series</li>
-            			<li>Microprocesseurs Intel et AMD</li>
-            			<li>Microcontrôleurs PIC</li>
-		</td>
-		</tr>
-		<tr>
-		<td>
-			<img src="uart.png"  width="200" height="200">
-		</td>
-		<td>
-        		<h2>Protocoles de Communication</h2>
-            			<li>UART, SPI, I2C</li>
-            			<li>CAN (Controller Area Network)</li>
-            			<li>Modbus</li>
-		</td>
-		</tr>
-		</table>
-		</section>
-	</body>
+        header {
+            background: #333;
+            color: #fff;
+            text-align: center;
+            padding: 10px;
+        }
+
+        nav {
+            background: #444;
+            padding: 10px;
+            text-align: center;
+        }
+
+        nav a {
+            color: #fff;
+            text-decoration: none;
+            margin: 0 10px;
+        }
+
+        section {
+            margin: 20px;
+        }
+
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 20px;
+        }
+
+        table img {
+            border-radius: 50%;
+            max-width: 100%;
+            height: auto;
+        }
+
+        table td {
+            padding: 20px;
+            vertical-align: top;
+        }
+
+        h2 {
+            color: #333;
+        }
+
+        li {
+            list-style-type: none;
+            margin-bottom: 8px;
+            color: #555;
+        }
+    </style>
+</head>
+
+<body background="back.png">
+    <header>
+        <h1>Mes Compétences</h1>
+    </header>
+
+    <nav>
+        <a href="https://sustainerr.github.io/Web_3b4/miniprojet_html/index.html">Accueil</a>
+        <a href="https://sustainerr.github.io/Web_3b4/miniprojet_html/competence.html">Mes compétences</a>
+        <a href="https://sustainerr.github.io/Web_3b4/miniprojet_html/projet.html">Mes projets</a>
+        <a href="https://sustainerr.github.io/Web_3b4/miniprojet_html/contact.html">Contact</a>
+    </nav>
+
+    <section>
+        <table>
+            <tr>
+                <td>
+                    <img src="C.png" width="100" height="100" alt="Langages de Programmation">
+                </td>
+                <td>
+                    <h2>Langages de Programmation</h2>
+                    <li>C/C++</li>
+                    <li>Assembleur</li>
+                    <li>Python</li>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <img src="linux.png" width="200" height="200" alt="Systèmes d'Exploitation Embarqués">
+                </td>
+                <td>
+                    <h2>Systèmes d'Exploitation Embarqués</h2>
+                    <li>RTOS (Real-Time Operating Systems)</li>
+                    <li>FreeRTOS</li>
+                    <li>Embedded Linux</li>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <img src="arm.jpg" width="200" height="200" alt="Microcontrôleurs et Microprocesseurs">
+                </td>
+                <td>
+                    <h2>Microcontrôleurs et Microprocesseurs</h2>
+                    <li>ARM Cortex-M Series</li>
+                    <li>Microprocesseurs Intel et AMD</li>
+                    <li>Microcontrôleurs PIC</li>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <img src="uart.png" width="200" height="200" alt="Protocoles de Communication">
+                </td>
+                <td>
+                    <h2>Protocoles de Communication</h2>
+                    <li>UART, SPI, I2C</li>
+                    <li>CAN (Controller Area Network)</li>
+                    <li>Modbus</li>
+                </td>
+            </tr>
+        </table>
+    </section>
+</body>
+
 </html>
