--- a/miniprojet_html/competence.html
+++ b/miniprojet_html/competence.html
@@ -1,6 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -126,5 +124,4 @@
         </table>
     </section>
 </body>
-
 </html>
