--- a/miniprojet_html/contact.html
+++ b/miniprojet_html/contact.html
@@ -80,6 +80,7 @@
             background-color: #45a049;
         }
     </style>
+    <script src="testfield.js"></script>
 </head>
 
 <body background="back.png">
@@ -101,7 +102,7 @@
                     <label for="name">Nom :</label>
                     <input type="text" id="name" name="name" required>
                     <label for="email">Email :</label>
-                    <input type="email" id="email" name="email" required>
+                    <input type="email" id="email" oninput="testspace()" name="email" required>
                     <label for="subject">Sujet :</label>
                     <input type="text" id="subject" name="subject" required>
                     <label for="message">Message :</label>
@@ -109,7 +110,7 @@
                 </td>
                 <td>
                     <img src="contact.png"  width="250" height="250" alt="Contact Image">
-                    <button type="submit">Envoyer</button>
+                    <button onclick="validateForm()" type="submit">Envoyer</button>
                 </td>
             </tr>
         </table>
